plugins {
    id 'org.springframework.boot' version '2.6.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group = 'com.fx'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

javafx {
    version = "17"
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation group: 'net.rgielen', name: 'javafx-weaver-spring-boot-starter', version: '1.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}


/*
run   {
    doFirst   {
        jvmArgs   =   [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls',
                '--add-modules', 'javafx.fxml',
                '--add-modules', 'javafx.graphics',
                '--add-modules', 'javafx.base',
                '--add-modules', 'javafx.swing',
        ]
    }
}
*/